# Ace-Step-Wrangler

./: .gitignore  .gitmodules  CLAUDE.md  README.md  pyproject.toml  run.py
backend/: acestep_wrapper.py  main.py
docs/: DESIGN_SPEC_V2.md  FUTURE_PLANS.md  LORA_PLAN.md  LYRICS_GUIDE.md  PROJECT_PLAN.md  USER_GUIDE.md
frontend/: app.js  index.html  style.css
